layout operator control buttons in div with correct line overflow

--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -1,6 +1,7 @@
 .operator-controls {
 
-    margin: 16px;
+    margin: auto 16px;
+    text-align: center;
 
     button {
         min-width: 180px;
